src/test/deca/syntax/invalid/33_mauvais_method_call.deca
// Description:
//    Test d'un mauvais cast
//
// Resultats:
//    Ligne 11
//
// Historique:
//    cree le 01/01/2023

{
    a = b.method(a a a );
}